log
Sat, Mar 22, 2025 10:00:15 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025 10:07:56 PM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:13: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       valor = i;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
dc5e91a
Sat, Mar 22, 2025 10:19:32 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c555174
Sat, Mar 22, 2025 11:51:50 PM: 
 tests:  1|4
total_score: 10/70
07a66ca
Sun, Mar 23, 2025 12:04:47 AM: 
 exercises.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 40/70
bc5cd42
Sun, Mar 23, 2025 12:25:11 AM: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
88e7602
Sun, Mar 23, 2025  1:16:47 AM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:27: error: multi-character character constant [-Werror=multichar]
       while (cadena[i] != '/0')
                           ^~~~
exercises.c:132:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(Pila1, elemento);
                      ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:137:23: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
          char valor = (char)top(Pila1);
                       ^
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(Pila2,valor);
                     ^~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:143:18: error: passing argument 1 of 'top' makes pointer from integer without a cast [-Werror=int-conversion]
          if (top(Pila1 != top(Pila2)))
                  ^~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int'
 void *top(Stack *stack) { return first(stack); }
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
6d7ee3d
Sun, Mar 23, 2025 11:49:01 AM: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:132:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(Pila1, elemento);
                      ^~~~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:137:23: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
          char letra = (char)top(Pila1);
                       ^
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(Pila2,letra);
                     ^~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bd6b6f5
